--- a/dada/templates/admin_screen.tmpl
+++ b/dada/templates/admin_screen.tmpl
@@ -30,7 +30,7 @@
 			
 					<!-- tmpl_if expr="(error eq 'bad_ip')" -->
 						<div class="alert-box alert radius">
-						    You are not allowed to log into your list control panel from your present IP Address.
+						    You are not allowed to log into Control Panel Settings from your present IP Address.
 						</div>
 					<!-- /tmpl_if -->
 			
