--- a/dada/templates/plugins/tracker/default.tmpl
+++ b/dada/templates/plugins/tracker/default.tmpl
@@ -9,7 +9,7 @@
 			<div class="medium-10 small-9 columns">
 			   	<nav class="breadcrumbs">	
 				 	 <a href="#" class="unavailable">
-						Plugins
+						Plugins/Extensions
 					 </a>
 			 	    <a 
 						href="<!-- tmpl_var Plugin_URL -->"
