--- a/dada/templates/feature_set_screen.tmpl
+++ b/dada/templates/feature_set_screen.tmpl
@@ -1,6 +1,6 @@
 <!-- begin feature_set_screen.tmpl --> 
 
-<!-- tmpl_set name="title" value="Your List Control Panel &#187; Enable/Disable Features" -->
+<!-- tmpl_set name="title" value="Control Panel Settings &#187; Enable/Disable Features" -->
 <div id="screen_meta" data-menu_highlight="feature_set"></div>
 
 
@@ -9,7 +9,7 @@
 	<div class="medium-10 small-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
-				 Your List Control Panel
+				 Control Panel Settings
 			 </a>
 	 	    <a 
 				href="#"
