--- a/dada/templates/list_cp_options_screen.tmpl
+++ b/dada/templates/list_cp_options_screen.tmpl
@@ -1,13 +1,13 @@
 <!-- begin list_cp_options_screen.tmpl --> 
 
-<!-- tmpl_set name="title" value="Your List Control Panel &#187; Options" -->
+<!-- tmpl_set name="title" value="Control Panel Settings &#187; Options" -->
 <div id="screen_meta" data-menu_highlight="list_cp_options"></div>
 
 <div class="row hide-for-small-only" id="control_panel_breadcrumbs">
 	<div class="medium-10 small-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
-				Your List Control Panel
+				Control Panel Settings
 			 </a>
 	 	    <a 
 				href="#"
