--- a/dada/templates/plugins/change_list_shortname/default.tmpl
+++ b/dada/templates/plugins/change_list_shortname/default.tmpl
@@ -6,7 +6,7 @@
 	<div class="medium-10 small-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
-				Plugins
+				Plugins/Extensions
 			 </a>
 	 	    <a 
 				href="#"
