--- a/dada/templates/plugins/global_config/default.tmpl
+++ b/dada/templates/plugins/global_config/default.tmpl
@@ -2,13 +2,24 @@
 <div id="screen_meta" data-menu_highlight="global_config"></div>
 
 
-<div id="screentitle"> 
-	<div id="screentitlepadding">
-		<!-- tmpl_var title --> 
+<div class="row">
+	<div class="medium-10 large-9 columns">
+	   	<nav class="breadcrumbs">	
+		 	 <a href="#" class="unavailable">
+				Plugins/Extensions
+			 </a>
+	 	    <a 
+				href="#"
+				class="current"
+			>	
+				Global Config Helper
+			</a>
+		</nav>
 	</div>
-	<!-- tmpl_include help_link_widget.tmpl -->
+	<div class="medium-2 large-3 columns text-right">
+	   <!-- tmpl_include help_link_widget.tmpl -->
+	</div>
 </div>
-<div id="gobal_config_helper"></div> 
 
 
 <p>
