--- a/dada/templates/plugins/log_viewer/default.tmpl
+++ b/dada/templates/plugins/log_viewer/default.tmpl
@@ -3,7 +3,7 @@
 	<div class="medium-10 large-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
-				Plugins
+				Plugins/Extensions
 			 </a>
 	 	    <a 
 				href="#"
