--- a/dada/templates/plugins/password_protect_directories/default.tmpl
+++ b/dada/templates/plugins/password_protect_directories/default.tmpl
@@ -4,7 +4,7 @@
 	<div class="medium-10 small-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
-				Plugins
+				Plugins/Extensions
 			 </a>
 	 	    <a 
 				href="#"
