--- a/dada/templates/mail_sending_advanced_options_screen.tmpl
+++ b/dada/templates/mail_sending_advanced_options_screen.tmpl
@@ -1,12 +1,12 @@
 <!-- begin mail_sending_advanced_options_screen.tmpl -->
 
-<!-- tmpl_set name="title" value="Mail Sending &#187; Advanced Options" -->
+<!-- tmpl_set name="title" value="Sending &#187; Advanced Options" -->
 
 <div class="row hide-for-small-only" id="control_panel_breadcrumbs">
 	<div class="medium-10 small-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
-				 Mail Sending
+				 Sending
 			 </a>
 	 	    <a 
 				href="#"
