--- a/dada/templates/mail_sending_options_screen.tmpl
+++ b/dada/templates/mail_sending_options_screen.tmpl
@@ -2,14 +2,14 @@
 
 
 
-<!-- tmpl_set name="title" value="Mail Sending &#187; Options" -->
+<!-- tmpl_set name="title" value="Sending &#187; Options" -->
 <div id="screen_meta" data-menu_highlight="mail_sending_options"></div>
 
 <div class="row hide-for-small-only" id="control_panel_breadcrumbs">
 	<div class="medium-10 small-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
-				Mail Sending
+				Sending
 			 </a>
 	 	    <a 
 				href="#"
