--- a/dada/templates/sending_monitor_screen.tmpl
+++ b/dada/templates/sending_monitor_screen.tmpl
@@ -9,7 +9,7 @@
 				 Mass Mailing 
 			 </a>
 	 	    <a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=sending_monitor">
-				Mass Mailing Monitor
+				Monitor
 			</a>
 			<!-- tmpl_if header_subject_label --> 
 				 <a href="#" class="current">
