--- a/dada/templates/sending_monitor_index_screen.tmpl
+++ b/dada/templates/sending_monitor_index_screen.tmpl
@@ -2,7 +2,7 @@
 
 
 
-<!-- tmpl_set name="title" value="Mass Mailing &#187; Mass Mailing Monitor" -->
+<!-- tmpl_set name="title" value="Mass Mailing &#187; Monitor" -->
 
 
 <div id="screen_meta" data-menu_highlight="sending_monitor"></div>
@@ -17,7 +17,7 @@
 				href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=sending_monitor"
 				class="current"
 			>	
-				Mass Mailing Monitor		</a>
+				Monitor		</a>
 		</nav>
 	</div>
 	<div class="medium-2 small-3 columns text-right">
