--- a/dada/installer-disabled/templates/install_or_upgrade.tmpl
+++ b/dada/installer-disabled/templates/install_or_upgrade.tmpl
@@ -7,7 +7,7 @@
 <!-- tmpl_if found_existing_dada_files_dir --> 
 	<div class="row">
 		<div class="small-12 medium-8 large-8 medium-centered large-centered columns">
-			<div class="alert-box info radius" style="margin-top:2em">
+			<div class="alert-box success radius" style="margin-top:2em">
 				<p>Found an existing <!-- tmpl_var Dada_Files_Dir_Name --> directory at:</p>
 				<p class="text-center"><strong><!-- tmpl_var dada_files_parent_dir -->/.dada_files</strong></p> 
 				<p>Want to upgrade?</p>
