Add the for-small buttons

--- a/dada/templates/send_url_email_screen.tmpl
+++ b/dada/templates/send_url_email_screen.tmpl
@@ -203,11 +203,22 @@
 				</dd>
 			</dl>
 					
+					<div class="show-for-small-only">
+						<div class="button_toolbar">
+							<input type="button" value="Loading..." class="button small" >
+						</div>
+					</div>
+					
+					
 					<!-- /tmpl_unless --> 
 				<!-- /tmpl_unless --> 	
 			<!-- ?!?!!!? -->			
 		</div>	
 	</div>
+	
+
+	
+	
 </form>
 <!-- tmpl_include send_url_email_message_body_help_widget.tmpl -->		
 
