hide bc for small

--- a/dada/templates/plugins/log_viewer/default.tmpl
+++ b/dada/templates/plugins/log_viewer/default.tmpl
@@ -1,5 +1,5 @@
 <!-- tmpl_set name="title" value="Plugins/Extensions &#187; Log Viewer" -->
-<div class="row">
+<div class="row hide-for-small-only" id="control_panel_breadcrumbs">
 	<div class="medium-10 large-9 columns">
 	   	<nav class="breadcrumbs">	
 		 	 <a href="#" class="unavailable">
