There is no variable named, "ARCHIVE_EDITOR_URL" - wood boy.

--- a/dada/templates/view_archive_index_screen.tmpl
+++ b/dada/templates/view_archive_index_screen.tmpl
@@ -30,7 +30,6 @@
  <table style="width:100%" class="responsive">
   <tr>
 	<th width="25">
-	  <p>&nbsp;</p>
    </th>
      <th>
 
@@ -43,21 +42,17 @@
    <th>
       Sent
    </th>
-  <!-- tmpl_if ARCHIVE_EDITOR_URL --> 
   <th>
   &nbsp;
   </th>
-  
-  <!--/tmpl_if-->
-  
-  
+   
   </tr>
   
  
   <!-- tmpl_loop index_list --> 
   
 	   <tr title="<!-- tmpl_var message_blurb -->">
-	    <td>
+	    <td width="25">
 			<input 
 				type="checkbox" 
 				name="address" 
