--- a/dada/templates/list_invite_screen.tmpl
+++ b/dada/templates/list_invite_screen.tmpl
@@ -36,6 +36,8 @@
 
 <form name="mass_mailing" id="mass_mailing" action="<!-- tmpl_var name="S_PROGRAM_URL" -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
 	
+	<!-- tmpl_include send_email_button_action_notice_widget.tmpl -->
+	
 	<div id="entire_form">
 	  <div id="form_widgets">
 
