--- a/dada/templates/plugins/bridge/test_pop3.tmpl
+++ b/dada/templates/plugins/bridge/test_pop3.tmpl
@@ -17,5 +17,5 @@
 <!-- /tmpl_if --> 
 
 	
-<div id="test_pop3_results_loading"><p class="alert">&nbsp;</p></div>
+<div id="test_pop3_results_loading"><p>&nbsp;</p></div>
 <div id="test_pop3_results"></div> 
