--- a/dada/templates/send_email_headers_widget.tmpl
+++ b/dada/templates/send_email_headers_widget.tmpl
@@ -12,7 +12,7 @@
 			<div class="large-11 columns">
 				<input 
 					type="text" 
-					disabled="disabled"
+					readonly="readonly"
 					value="<!-- tmpl_var list_settings.mailing_list_message_from_phrase  escape="HTML" --> &lt;<!-- tmpl_var list_settings.list_owner_email  escape="HTML" -->&gt;"
 				>
 			</div>
@@ -27,7 +27,7 @@
 			<div class="large-11 columns">
 				<input 
 					type="text" 
-					disabled="disabled"
+					readonly="readonly"
 					value="<!-- tmpl_var list_settings.mailing_list_message_to_phrase  escape="HTML" --> &lt;...&gt;"
 				> 
 			</div>
