--- a/dada/templates/send_email_screen.tmpl
+++ b/dada/templates/send_email_screen.tmpl
@@ -63,7 +63,9 @@
 			</div>
 		</nav>
 	 </div>
- 
+	 
+	<!-- tmpl_include send_email_button_action_notice_widget.tmpl -->
+	
 	<div id="entire_form">
 		<div id="form_widgets">
 			<!-- tmpl_if draft_id --> 
