--- a/dada/templates/send_url_email_screen.tmpl
+++ b/dada/templates/send_url_email_screen.tmpl
@@ -67,6 +67,7 @@
 		</nav>
 	 </div>
 
+	 <!-- tmpl_include send_email_button_action_notice_widget.tmpl -->
 	
 	<div id="entire_form">
 		<div id="form_widgets"> 
