--- a/dada/templates/profile_update_email_confirm.tmpl
+++ b/dada/templates/profile_update_email_confirm.tmpl
@@ -128,9 +128,9 @@
 	<!-- /tmpl_loop --> 
 <!-- tmpl_else --> 
 
-	<p class="alert">
+	<div class="alert-box info radius">
 		You are not currently subscribed to any mailing list.
-	</p> 
+	</div> 
 	
 <!-- /tmpl_if --> 
 
