--- a/dada/templates/send_email_button_widget.tmpl
+++ b/dada/templates/send_email_button_widget.tmpl
@@ -1,95 +1,170 @@
 <!-- begin send_email_button_widget.tmpl -->
 
+<!-- tmpl_if comment --> 
+	draft_role: <!-- tmpl_var draft_role --> 
+	archive_no_send: <!-- tmpl_var archive_no_send -->
+<!-- /tmpl_if --> 
 
-  <!-- tmpl_if comment --> 
- draft_role: <!-- tmpl_var draft_role --> 
- archive_no_send: <!-- tmpl_var archive_no_send -->
-  <!-- /tmpl_if --> 
-
-		<ul class="button-group">  
-	
-	  <!-- tmpl_if expr="(mass_mailing_type eq 'invite')" -->
- 
-			 <li>
-				<input type="submit" class="button small warning sendmassmailing" name="process" id="submit_mass_mailing" value="Send: Invitations" >
-	  		 </li>
-	  <!-- tmpl_else --> 
-  
-		 <li>
-				<button type="button" class="button small cancel_message alert" id="cancel_message_link">
-					<i class="fi-x"></i>
-				</button>
-			</li>
-		  <li class="divider"></li>
-		
- 
-	  <!-- tmpl_if archive_no_send --> 
-	 <li>
-					<input type="submit" class="button small success sendmassmailing" name="process" value="Save as: Archive"  id="submit_mass_mailing" >
-	 	</li>
-			<!-- /tmpl_if --> 
- 
-	  <!-- tmpl_if expr="(draft_role eq 'draft')" -->
-	 <li>
-					<input type="submit" class="button small success sendmassmailing justatest" name="process" value="Send Test"  id="submit_test_mailing" >  
-				</li>
-			
-	 <!-- tmpl_unless archive_no_send -->   
-					<li>
-						<input type="submit" class="button small warning sendmassmailing" name="process" value="Send Mass Mailing"  id="submit_mass_mailing" >
-					</li>
-	  			 
-					 <li class="divider"></li>
-				
-					<li>
-	   	<input type="button" class="button small success save_msg" name="process" value="Save Draft"  data-save_draft_role="draft"    >
-	   </li>
-					<li>
-						<input type="button" class="button small success save_msg" name="process" value="Save as: Stationery" data-save_draft_role="stationery" >
-	   </li>
-					<li>
-						<input type="submit" class="button small success save_msg" name="process" value="Save as: Schedule"  data-save_draft_role="schedule"  >
-	 	</li>
-				<!-- /tmpl_unless --> 
-	 <!-- /tmpl_if -->
-
-	 <!-- tmpl_if expr="(draft_role eq 'stationery')" -->
-	   <li>
-			  <input type="submit" class="button small success sendmassmailing justatest" name="process" value="Send Test"  id="submit_test_mailing" >  
-	   </li>
-		  
-	 		 <li class="divider"></li>
-		  
-		  
-			  <li>
-	 <input type="button" class="button small success save_msg"  name="process" value="New Draft From Stationery"  data-save_draft_role="draft"    >
-	   </li>
-			  <li>
-				  <input type="button" class="button small success save_msg"  name="process" value="Save Stationery" data-save_draft_role="stationery" >
-	   </li>
-			  <li>
-					<input type="submit" class="button small success save_msg"  name="process" value="New Schedule From Stationery"   data-save_draft_role="schedule"  >
-	   </li>
-			<!-- /tmpl_if -->
-
-	 <!-- tmpl_if expr="(draft_role eq 'schedule')" -->
-  
-			  <li>
-					<input type="submit" class="button small success sendmassmailing justatest" name="process" id="submit_test_mailing" value="Send Test" >  
-	  	</li>
-				<li>
-	 	<input type="submit" class="button small success save_msg"  name="process" value="Save Schedule"  data-save_draft_role="schedule"  >
-	 	</li>
-			<!-- /tmpl_if -->
-	  <!-- /tmpl_if --> 
-		
+<ul class="button-group">  
+	<!-- tmpl_if expr="(mass_mailing_type eq 'invite')" -->
 		<li>
-		  <small>
-				<span id="button_action_notice" class="alert"></span>
-			</small>
+			<button 
+				type="submit" 
+				class="button small warning sendmassmailing" 
+				name="process" 
+				id="submit_mass_mailing"
+			>
+				Send: Invitations
+			</button>
+		</li>
+	<!-- tmpl_else --> 
+		<li>
+			<button 
+				type="button" 
+				class="button small cancel_message alert" 
+				id="cancel_message_link"
+			>
+				<i class="fi-x"></i>
+			</button>
 		</li>
 
-	</ul> 
+		<!-- tmpl_if archive_no_send --> 
+			<li>
+				<button 
+					type="submit" 
+					class="button small success sendmassmailing" 
+					name="process" 
+					id="submit_mass_mailing"
+				>
+					Save as: Archive
+				</button>
+			</li>
+		<!-- /tmpl_if --> 
+
+		<!-- tmpl_if expr="(draft_role eq 'draft')" -->
+			<li>
+				<button 
+					type="submit" 
+					class="button small success sendmassmailing justatest" 
+					name="process" 
+					id="submit_test_mailing"
+				>
+					Send Test
+				</button>
+			</li>
+			<!-- tmpl_unless archive_no_send -->   
+				<li>
+					<button
+						type="submit"
+						class="button small warning sendmassmailing" 
+						name="process" 
+						id="submit_mass_mailing"
+					>
+						Send Mass Mailing
+					</button>
+				</li>
+				<li>
+					<button 
+						type="button" 
+						class="button small success save_msg"
+						name="process" 
+						data-save_draft_role="draft"
+					>
+						Save Draft
+					</button>
+				</li>
+				<li>
+					<button
+						type="button" 
+						class="button small success save_msg" 
+						name="process"
+						data-save_draft_role="stationery"
+					>
+						Save as: Stationery
+					</button>
+				</li>
+				<li>
+					<button
+						type="submit" 
+						class="button small success save_msg" 
+						name="process"
+						data-save_draft_role="schedule"
+					>
+						Save as: Schedule
+					</button>
+				</li>
+			<!-- /tmpl_unless --> 
+		<!-- /tmpl_if -->
+
+		<!-- tmpl_if expr="(draft_role eq 'stationery')" -->
+			<li>
+				<button
+					type="submit" 
+					class="button small success sendmassmailing justatest" 
+					name="process" 
+					id="submit_test_mailing"
+				>
+					Send Test
+				</button>
+			</li>
+
+			<li>
+				<button
+					type="button" 
+					class="button small success save_msg"
+					name="process"
+					data-save_draft_role="draft"
+				>
+					New Draft From Stationery
+				</button>
+			</li>
+			<li>
+				<button
+					type="button" 
+					class="button small success save_msg"
+					name="process"
+					data-save_draft_role="stationery"
+				>
+					Save Stationery
+				</button>
+			</li>
+			<li>
+				<button
+					type="submit" 
+					class="button small success save_msg"
+					name="process"
+					data-save_draft_role="schedule"
+				>
+					New Schedule From Stationery
+				</button>
+			</li>
+		<!-- /tmpl_if -->
+
+		<!-- tmpl_if expr="(draft_role eq 'schedule')" -->
+
+			<li>
+				<button
+					type="submit"
+					class="button small success sendmassmailing justatest"
+					name="process"
+					id="submit_test_mailing"
+				>
+					Send Test
+				</button>
+			</li>
+			<li>
+				<button
+					type="submit"
+					class="button small success save_msg"
+					name="process"
+					data-save_draft_role="schedule"
+				>
+					Save Schedule
+				</button>
+			</li>
+		<!-- /tmpl_if -->
+	<!-- /tmpl_if --> 
+</ul> 
 
 <!-- end send_email_button_widget.tmpl -->
 
