--- a/dada/templates/add_screen.tmpl
+++ b/dada/templates/add_screen.tmpl
@@ -211,9 +211,8 @@
         <!-- tmpl_else --> 
             <p>
     	        <label for="new_emails">
-    	                Enter
-    	        </label> addresses, (one address per line)
-	        </p>
+    	                Enter addresses, (one address per newline)</label>
+	        	</p>
         <!-- /tmpl_if --> 
 
 
