--- a/dada/templates/view_list_viewport_widget.tmpl
+++ b/dada/templates/view_list_viewport_widget.tmpl
@@ -190,19 +190,21 @@
         <!-- /tmpl_if -->
     
         </form>
+		
         <!-- tmpl_if EXPR="((type eq 'list') || (type eq 'black_list') || (type eq 'authorized_senders') || (type eq 'moderators') || (type eq 'white_list'))" -->
         
             <!-- tmpl_unless query -->
 			    <li>
-                <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" id="remove_all_addresses">
-                 <input type="hidden" name="flavor"       value="remove_all_subscribers" >
-                 <input type="hidden" name="type" value="<!-- tmpl_var type -->" >
                 <!-- tmpl_if expr="(type eq 'list')" -->
-                      <button type="submit" class="small button alert unsubscribeAllSubscribers" value="&#8656; Unsubscribe ALL <!-- tmpl_var type_title -->" data-type="<!-- tmpl_var type_title -->">
+                      <a href="#" class="small button alert unsubscribeAllSubscribers" data-type="<!-- tmpl_var type -->">
+						  &#8656; Unsubscribe ALL <!-- tmpl_var type_title -->
+					  </a>
                 <!-- tmpl_else --> 
-                      <input type="submit" class="small button alert unsubscribeAllSubscribers" value="&#8656; Remove ALL <!-- tmpl_var type_title -->" data-type="<!-- tmpl_var type_title -->">
-                <!-- /tmpl_if --> 
-                </form> </li>
+                      <a href="#" class="small button alert unsubscribeAllSubscribers" data-type="<!-- tmpl_var type -->">
+						  &#8656; Remove ALL <!-- tmpl_var type_title -->
+				      </a>
+                <!-- /tmpl_if -->
+			</li>
             <!-- /tmpl_unless -->
         <!-- /tmpl_if -->
 
@@ -212,13 +214,10 @@
             <!-- tmpl_if can_filter_subscribers_through_blacklist --> 
                 <!-- tmpl_unless query --> 
                       <li>
-					 <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" name="blacklist_filter_form">
-                      <input type="hidden" name="flavor" value="filter_using_black_list" >
-                      
-                           <input type="submit" class="small button" value="Filter Subscribers Through the Black List" >
-
-                     </form>
-				 </li>
+                           <a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=blacklist_filter_form" class="small button">
+							   Filter Subscribers Through the Black List
+						   </a>
+				     </li>
                 <!-- /tmpl_unless -->
             <!--/tmpl_if-->
         <!--/tmpl_if-->
