Clarifying batch sending speed stuff

--- a/dada/templates/mailing_sending_mass_mailing_options_screen.tmpl
+++ b/dada/templates/mailing_sending_mass_mailing_options_screen.tmpl
@@ -66,8 +66,8 @@
 				</label>
 				
 				<div class="alert-box warning radius">
-					Setting your batch settings to send at a higher rate than what is allowed 
-					for your hosting account will cause problems with email delivery. 
+					<strong>Warning:</strong> setting your batch settings to send at a higher rate than what is allowed 
+					on your mail server/mail service provider will cause problems with email delivery! 
 				</div>
 				
 			</div> 
