--- a/dada/templates/amazon_ses_get_stats_widget.tmpl
+++ b/dada/templates/amazon_ses_get_stats_widget.tmpl
@@ -5,32 +5,40 @@
     	<!-- tmpl_if has_ses_options --> 
 	
     		<!-- tmpl_if expr="(status == 200)" -->
-    			<p>
-    				Your current Amazon SES sending limit is: 
+    			
+				<ul>
+    				
+					<li>
+						Total daily limit:
+	    				<strong>
+	    					 <!-- tmpl_var Max24HourSend --> messages
+	    				</strong> 
+					</li>
+					
+					<li>
+	    				Percentage of daily limit allowed for <!-- tmpl_var PROGRAM_NAME -->:
+						<strong><!-- tmpl_var allowed_sending_quota_percentage -->%</strong>
+					</li>				 
+										
+					<li>
+						Sending speed limit:
     					<strong>
-    						<!-- tmpl_var MaxSendRate --> message(s)/second
+    						<!-- tmpl_var MaxSendRate --> messages/second
     					</strong>
-    				with a limit of 
-    				<strong>
-    					<!-- tmpl_var Max24HourSend --> messages
-    				</strong> 
-    				every 24 hours 
-				
-    				(<strong><!-- tmpl_var allowed_sending_quota_percentage -->%</strong>
-				
-    				 which can be utilized by <!-- tmpl_var PROGRAM_NAME -->). 
-				 
-    			 </p>
-    			 <p>
+    				</li>
+						
+    			    <li>
+	
+    				Number of messsages reported as having been sent in the last 24 hours:
     				<strong>
     					<!-- tmpl_var SentLast24Hours --> messages
     				</strong>
-	
-    				have been reported as being sent in the last 24 hours.
-    			</p>
+					
+				</li>
+			</ul>
     		<!-- tmpl_else --> 
     			<p>
-    				<strong>Warning!</strong>  There's a problem with the AWS Credentials. 
+    				<strong>Warning!</strong> There's a problem with the AWS Credentials. 
     			</p>	
     		<!-- /tmpl_if -->
     	<!-- tmpl_else --> 
