--- a/dada/templates/admin_template.tmpl
+++ b/dada/templates/admin_template.tmpl
@@ -100,7 +100,7 @@
 	<div class="off-canvas-wrap" data-offcanvas>
 		<div class="inner-wrap">       
 			<!-- mobile navigation -->
-			<nav class="tab-bar hide-for-large-only" role="navigation">
+			<nav class="tab-bar hide-for-large-up" role="navigation">
 				<section class="left-medium">
 					<a class="left-off-canvas-toggle menu-icon" href="#">
 						<span>
@@ -119,7 +119,7 @@
 			<!-- /mobile navigation -->
 			
 		<section class="main-section">
-			<nav class="top-bar show-for-large-only" data-topbar role="navigation" id="admin_header">
+			<nav class="top-bar show-for-large-up" data-topbar role="navigation" id="admin_header">
 				<ul class="title-area">
 					<li class="name">
 						<h3>
@@ -174,13 +174,13 @@
 				</section> 
 			</nav>
 		<!-- tmpl_if expr="(list_settings.list_control_panel_style eq 'top_bar')" -->	
-			<div class="show-for-large-only">
+			<div class="show-for-large-up">
 				<!-- tmpl_var admin_top_bar_menu -->
 			</div>
 		<!-- tmpl_else -->
 			<div class="row"  style="width: 100%; margin-left: auto; margin-right: auto; max-width: initial;">
 				<div class="large-2 medium-3 columns">
-					<div class="show-for-large-only">
+					<div class="show-for-large-up">
 						<div class="sidebar">
 							<nav>
 								<!-- tmpl_var admin_menu -->
