s/medium-only-text-right large-only-text-right/medium-text-right/
(which hopefully does the same thing, as well as cover xlarge + xxlarge, which are Things.

--- a/dada/templates/change_password_screen.tmpl
+++ b/dada/templates/change_password_screen.tmpl
@@ -70,7 +70,7 @@
 	        <div class="large-3 medium-3 columns">
                <label 
 			   		for="new_password"
-					class="medium-only-text-right large-only-text-right"
+					class="medium-text-right"
 				>
                    New List Password
                 </label>
@@ -84,7 +84,7 @@
 	        <div class="large-3 medium-3 columns">
                <label 
 			   	for="again_new_password"
-				class="medium-only-text-right large-only-text-right"
+				class="medium-text-right"
 				>
                    Re-enter New List Password
 				</label> 
