--- a/dada/templates/field_comparisons_widget.tmpl
+++ b/dada/templates/field_comparisons_widget.tmpl
@@ -5,7 +5,7 @@
 		
 		<div class="row">
 			<div class="large-2 columns">
-				<label for="<!-- tmpl_var name -->.operator" class="medium-only-text-right large-only-text-right">
+				<label for="<!-- tmpl_var name -->.operator" class="medium-text-right">
 					<!-- tmpl_var label -->:
 				</label>
 			</div>
@@ -29,7 +29,7 @@
 
 	<div class="row">
 		<div class="large-2 columns">	
-			<label for="subscriber_timestamp_rangestart" class="medium-only-text-right large-only-text-right">
+			<label for="subscriber_timestamp_rangestart" class="medium-text-right">
 				Subscription Date:
 			</label> 
 		</div>
