--- a/dada/templates/membership_screen.tmpl
+++ b/dada/templates/membership_screen.tmpl
@@ -422,7 +422,7 @@
 						<div class="row">
 							<div class="large-3 medium-3 columns">							
 								<label for="<!-- tmpl_var name escape=HTML -->"
-									class="medium-only-text-right large-only-text-right"
+									class="medium-text-right"
 								>
 									<!-- tmpl_var label escape=HTML --> (<!-- tmpl_var name escape=HTML -->)
 								</label>
