--- a/dada/templates/send_email_test_recipient_widget.tmpl
+++ b/dada/templates/send_email_test_recipient_widget.tmpl
@@ -4,7 +4,7 @@
 		<div class="large-3 medium-3 columns">
 			<label 
 				for="test_recipient" 
-				class="medium-only-text-right large-only-text-right"
+				class="medium-text-right"
 			>
 				Send Test Messages To:
 			</label>
