--- a/dada/templates/plugins/change_list_shortname/default.tmpl
+++ b/dada/templates/plugins/change_list_shortname/default.tmpl
@@ -33,7 +33,7 @@
 		<div class="row">
 			<div class="large-3 medium-3 columns">
 				<label 
-					class="medium-only-text-right large-only-text-right"
+					class="medium-text-right"
 					for="new_name"
 				>
 					New List Short Name
