--- a/dada/templates/profile_fields_screen.tmpl
+++ b/dada/templates/profile_fields_screen.tmpl
@@ -318,7 +318,7 @@
 	      <div class="row">
 	        <div class="large-3 medium-3 columns">
 		        <label 
-					class="medium-only-text-right large-only-text-right"
+					class="medium-text-right"
 					for="field"
 				>
 					Field Name
@@ -352,7 +352,7 @@
   	        <div class="large-3 medium-3 columns">
                   <label 
 				  	for="field_label"
-					class="medium-only-text-right large-only-text-right"
+					class="medium-text-right"
 				  >
 					  Label
 				  </label> 
@@ -384,7 +384,7 @@
 		
                  <label 
 				 	for="fallback_field_value"
-					class="medium-only-text-right large-only-text-right"
+					class="medium-text-right"
 				>
 					 Fallback Value
 				 </label> 
