--- a/dada/templates/profile_home.tmpl
+++ b/dada/templates/profile_home.tmpl
@@ -303,7 +303,7 @@
 											<div class="large-3 medium-3 columns">
 												<label 
 													for="<!-- tmpl_var name escape=HTML -->" 
-													class="medium-only-text-right large-only-text-right"
+													class="medium-text-right"
 												>
 							                        <!-- tmpl_if label --> 
 							                            <!-- tmpl_var label escape=HTML -->: 
