--- a/dada/templates/send_archive_form_widget.tmpl
+++ b/dada/templates/send_archive_form_widget.tmpl
@@ -22,7 +22,7 @@
 		<div class="row">
 			<div class="large-3 medium-3 columns">
 				<label 
-					class="medium-only-text-right large-only-text-right"
+					class="medium-text-right"
 					for="from_email"
 				>
 					Your email address
@@ -36,7 +36,7 @@
 		<div class="row">
 			<div class="large-3 medium-3 columns">
 				<label 
-					class="medium-only-text-right large-only-text-right"
+					class="medium-text-right"
 					for="to_email"
 				>
 					Your friend's email address
@@ -49,7 +49,7 @@
 		<div class="row">
 			<div class="large-3 medium-3 columns">
 				<label 
-					class="medium-only-text-right large-only-text-right"
+					class="medium-text-right"
 					for="note"
 				>
 					Note
