--- a/dada/templates/subscription_form_widget.tmpl
+++ b/dada/templates/subscription_form_widget.tmpl
@@ -38,7 +38,7 @@
 		      <div class="row">
 		        <div class="large-4 medium-4 columns">    		
 			        <label 
-						class="medium-only-text-right large-only-text-right"
+						class="medium-text-right"
 						for="list" 
 					>
 			       		Mailing List 
@@ -56,7 +56,7 @@
 			      <div class="row">
 			        <div class="large-4 medium-4 columns">
 						<label 
-							class="medium-only-text-right large-only-text-right"
+							class="medium-text-right"
 					  		for="email" 
 					  	>
 							Email Address
@@ -93,7 +93,7 @@
 						<div class="large-4 medium-4 columns">
 			
 					        <label 
-								class="medium-only-text-right large-only-text-right"
+								class="medium-text-right"
 								for="<!-- tmpl_var name escape=HTML -->" 
 							>
 						        <!-- tmpl_if pretty_name --> 
