--- a/dada/templates/change_info_screen.tmpl
+++ b/dada/templates/change_info_screen.tmpl
@@ -81,7 +81,7 @@
 	<div class="row">
 		<div class="large-3 medium-3 columns">
 		    <label 
-				class="medium-only-text-right large-only-text-right"
+				class="medium-text-right"
 				for="list_name"
 			>
             	List Name
@@ -110,7 +110,7 @@
 	<div class="row">
 		<div class="large-3 medium-3 columns">
 		    <label 
-				class="medium-only-text-right large-only-text-right"
+				class="medium-text-right"
 				for="list_owner_email"
 			>
 				List Owner Address
@@ -132,7 +132,7 @@
 	<div class="row">
 		<div class="large-3 medium-3 columns">
 		    <label 
-				class="medium-only-text-right large-only-text-right"
+				class="medium-text-right"
 				for="admin_email"
 			>
             	List Administrator Address
@@ -152,7 +152,7 @@
 	<div class="row">
 		<div class="large-3 medium-3 columns">
 		    <label 
-				class="medium-only-text-right large-only-text-right"
+				class="medium-text-right"
 				for="info"
 			>
             	List Description
@@ -174,7 +174,7 @@
 <div class="row">
 	<div class="large-3 medium-3 columns">
 	    <label 
-			class="medium-only-text-right large-only-text-right"
+			class="medium-text-right"
 			for="privacy_policy"
 		>
         	Privacy Policy
@@ -195,7 +195,7 @@
 <div class="row">
 	<div class="large-3 medium-3 columns">
 	    <label 
-			class="medium-only-text-right large-only-text-right"
+			class="medium-text-right"
 			for="physical_address"
 		>
     		Physical Address
