--- a/dada/templates/add_email_screen.tmpl
+++ b/dada/templates/add_email_screen.tmpl
@@ -38,9 +38,10 @@
 	</div>
 	<div id="add_email"></div>
 <!-- /tmpl_if -->
-
-
+	
 <div id="screen_meta" data-menu_highlight="add"></div>
+
+<!-- tmpl_include add_email_import_subcribers_disabled.tmpl -->
 
 <!-- tmpl_if expr="(type eq 'list')" --> 
         <!-- tmpl_if list_settings.send_subscribed_by_list_owner_message --> 
