--- a/dada/templates/list_archive_index_screen.tmpl
+++ b/dada/templates/list_archive_index_screen.tmpl
@@ -1,4 +1,4 @@
-<!-- begin archive_index_screen.tmpl -->
+<!-- begin list_archive_index_screen.tmpl -->
 
 <!-- tmpl_set name="title" value="<!-- tmpl_var list_settings.list_name --> Archives" --> 
 <!-- tmpl_set name="load_colorbox" value="1" -->
@@ -17,7 +17,6 @@
     </div>
 <!--/tmpl_if-->
 
-	
 <!-- tmpl_include list_page_info_widget.tmpl -->
 	
-<!-- end archive_index_screen.tmpl -->
+<!-- end list_archive_index_screen.tmpl -->
