--- a/dada/templates/newsfeed_widget.tmpl
+++ b/dada/templates/newsfeed_widget.tmpl
@@ -1,16 +1,13 @@
 <!-- begin newsfeed_widget.tmpl --> 
-
-
 <!-- tmpl_if list_settings.publish_archives_rss --> 
-
-    <p class="text-right">
-    
-      <a href="<!-- tmpl_var PROGRAM_URL -->/archive_rss/<!-- tmpl_var list_settings.list -->/">
-    	  <img src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/webicon-rss.png" alt="rss/atom" title="rss/atom">     
-  	  </a>
-   </p>
-        
+	<div class="row">
+		<div class="small-12 columns">
+			<div class="clearfix">					
+				<a href="<!-- tmpl_var PROGRAM_URL -->/archive_rss/<!-- tmpl_var list_settings.list -->/" class="right">
+					<img src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/webicon-rss.png" alt="rss/atom" title="rss/atom">     
+				</a>
+			</div>
+		</div>
+	</div>    
 <!-- /tmpl_if --> 
-
-
 <!-- end newsfeed_widget.tmpl --> 
