--- a/dada/templates/social_bookmarking_badges_widget.tmpl
+++ b/dada/templates/social_bookmarking_badges_widget.tmpl
@@ -1,30 +1,32 @@
 <!-- being social_bookmarking_badges_widget.tmpl --> 
+<div class="row">
+	<div class="small-12 columns">
+		<ul class="inline-list">
+			<li>
+				<a href="https://plus.google.com/share?url=<!-- tmpl_var PROGRAM_URL escape=URL -->/archive/<!-- tmpl_var list_settings.list escape=URL  -->/<!-- tmpl_var id escape=URL  -->/" target="_blank"> 
+					<img src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/webicon-googleplus.png" title="Share on Google+" width="48" height="48">
+				</a>
+			</li>
+			<li>
+				<a href="https://www.facebook.com/sharer/sharer.php?u=<!-- tmpl_var PROGRAM_URL escape=URL -->/archive/<!-- tmpl_var list_settings.list escape=URL  -->/<!-- tmpl_var id escape=URL  -->/" target="_blank">			
+					<img src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/webicon-facebook.png" title="Share on Facebook" width="48" height="48">
+				</a>
+			</li>
 
-<ul class="inline-list">
-	<li>
-		<a href="https://plus.google.com/share?url=<!-- tmpl_var PROGRAM_URL escape=URL -->/archive/<!-- tmpl_var list_settings.list escape=URL  -->/<!-- tmpl_var id escape=URL  -->/" target="_blank"> 
-			<img src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/webicon-googleplus.png" title="Share on Google+" width="48" height="48">
-		</a>
-	</li>
-	<li>
-		<a href="https://www.facebook.com/sharer/sharer.php?u=<!-- tmpl_var PROGRAM_URL escape=URL -->/archive/<!-- tmpl_var list_settings.list escape=URL  -->/<!-- tmpl_var id escape=URL  -->/" target="_blank">			
-			<img src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/webicon-facebook.png" title="Share on Facebook" width="48" height="48">
-		</a>
-	</li>
 
+			<li>
+				<a href="//www.reddit.com/submit" onclick="window.location = '//www.reddit.com/submit?url=' + encodeURIComponent(window.location); return false"> 
+					<img src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/webicon-reddit.png" title="Share on Reddit" width="48" height="48">	
+				</a>
+			</li>
 
-	<li>
-		<a href="//www.reddit.com/submit" onclick="window.location = '//www.reddit.com/submit?url=' + encodeURIComponent(window.location); return false"> 
-			<img src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/webicon-reddit.png" title="Share on Reddit" width="48" height="48">	
-		</a>
-	</li>
-
-	<li>
-		<a href="//pinboard.in/popup_login" onclick="window.location = '//pinboard.in/popup_login?url=' + encodeURIComponent(window.location); return false"> 
-			<img src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/webicon-pinboard.png" title="Share on Reddit" width="48" height="48">	
-		</a>
-	</li>
-</ul>
-<!-- (Icons are CC-Attrib; attrib to http://fairheadcreative.com; thanks!) -->
-
+			<li>
+				<a href="//pinboard.in/popup_login" onclick="window.location = '//pinboard.in/popup_login?url=' + encodeURIComponent(window.location); return false"> 
+					<img src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/images/webicon-pinboard.png" title="Share on Reddit" width="48" height="48">	
+				</a>
+			</li>
+		</ul>
+		<!-- (Icons are CC-Attrib; attrib to http://fairheadcreative.com; thanks!) -->
+	</div>
+</div>
 <!-- end social_bookmarking_badges_widget.tmpl -->
